# data-analysis

./: .gitignore  Dockerfile  README.md  docker_run.sh  pyproject.toml  run_docker_app.py
data/input/: sample_data.csv
scripts/: build_docker.sh  docker_ops.sh  generate_sample_data.py
src/: __main__.py  generate_analysis.py
src/data_analysis/: __main__.py
src/data_analysis/analysis/: excel.py  generate_analysis.py  summary.py
src/data_analysis/utility/: aws_file_ops.py  azure_file_ops.py  file_path_ops.py  local_file_ops.py  run_settings.py
tests/data_analysis/analysis/: excel_test.py
tests/data_analysis/utility/: file_path_ops_test.py  run_settings_test.py
