[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analysis"
version = "2025.01.26"
dependencies = [
  "numpy==2.2.2", 
  "pandas==2.2.3",
  "xlsxwriter==3.2.1",
  "black==24.10.0",
  "flake8==7.1.1"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*","dist*",".venv","src*"]