[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_analysis"
version = "2025.02"
dependencies = [
  "numpy==2.2.2", 
  "pandas==2.2.3",
  "xlsxwriter==3.2.1",
  "black==24.10.0",
  "flake8==7.1.1"
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["./src"]
include = ["data_analysis*"]
exclude = ["docs*", "tests*","dist*",".venv"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]